@@ -69,6 +69,7 @@ namespace QuantLib {
             || (y == 2019 && d == 1 && m == January)
             || (y == 2020 && d == 1 && m == January)
             || (y == 2021 && d == 1 && m == January)
+            || (y == 2022 && d == 3 && m == January)
             // Chinese New Year
             || (y == 2004 && d >= 19 && d <= 28 && m == January)
             || (y == 2005 && d >=  7 && d <= 15 && m == February)
@@ -91,6 +92,8 @@ namespace QuantLib {
             || (y == 2019 && d >= 4 && d <= 8 && m == February)
             || (y == 2020 && (d == 24 || (d >= 27 && d <= 31)) && m == January)
             || (y == 2021 && (d == 11 || d == 12 || d == 15 || d == 16 || d == 17) && m == February)
+            || (y == 2022 && ((d == 31 && m == January) ||
+                              (d <= 4 && m == February)))
             // Ching Ming Festival
             || (y <= 2008 && d == 4 && m == April)
             || (y == 2009 && d == 6 && m == April)
@@ -106,6 +109,7 @@ namespace QuantLib {
             || (y == 2019 && d == 5 && m == April)
             || (y == 2020 && d == 6 && m == April)
             || (y == 2021 && d == 5 && m == April)
+            || (y == 2022 && d >= 4 && d <= 5 && m == April)
             // Labor Day
             || (y <= 2007 && d >= 1 && d <= 7 && m == May)
             || (y == 2008 && d >= 1 && d <= 2 && m == May)
@@ -124,6 +128,7 @@ namespace QuantLib {
             || (y == 2019 && d >= 1 && d <=3 && m == May)
             || (y == 2020 && (d == 1 || d == 4 || d == 5) && m == May)
             || (y == 2021 && (d == 3 || d == 4 || d == 5) && m == May)
+            || (y == 2022 && d >= 2 && d <= 4 && m == May)
             // Tuen Ng Festival
             || (y <= 2008 && d == 9 && m == June)
             || (y == 2009 && (d == 28 || d == 29) && m == May)
@@ -139,6 +144,7 @@ namespace QuantLib {
             || (y == 2019 && d == 7 && m == June)
             || (y == 2020 && d >= 25 && d <= 26 && m == June)
             || (y == 2021 && d == 14 && m == June)
+            || (y == 2022 && d == 3 && m == June)
             // Mid-Autumn Festival
             || (y <= 2008 && d == 15 && m == September)
             || (y == 2010 && d >= 22 && d <= 24 && m == September)
@@ -151,6 +157,7 @@ namespace QuantLib {
             || (y == 2018 && d == 24 && m == September)
             || (y == 2019 && d == 13 && m == September)
             || (y == 2021 && (d == 20 || d == 21) && m == September)
+            || (y == 2022 && d == 12 && m == September)
             // National Day
             || (y <= 2007 && d >= 1 && d <= 7 && m == October) 
             || (y == 2008 && ((d >= 29 && m == September) ||
@@ -169,6 +176,7 @@ namespace QuantLib {
             || (y == 2020 && d >= 1 && d <= 2 && m == October)
             || (y == 2020 && d >= 5 && d <= 8 && m == October)
             || (y == 2021 && (d == 1 || d == 4 || d == 5 || d == 6 || d == 7) && m == October)
+            || (y == 2022 && d >= 3 && d <= 7 && m == October)
             // 70th anniversary of the victory of anti-Japaneses war
             || (y == 2015 && d >= 3 && d <= 4 && m == September)
             )
@@ -308,7 +316,15 @@ namespace QuantLib {
             Date(8, May, 2021),
             Date(18, September, 2021),
             Date(26, September, 2021),
-            Date(9, October, 2021)
+            Date(9, October, 2021),
+            // 2022
+            Date(29, January, 2022),
+            Date(30, January, 2022),
+            Date(2, April, 2022),
+            Date(24, April, 2022),
+            Date(7, May, 2022),
+            Date(8, October, 2022),
+            Date(9, October, 2022)
         };
         static const Size n =
             sizeof(working_weekends)/sizeof(working_weekends[0]);
