@@ -1,3 +1,7 @@
+2022-01-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/ql/time/calendars/china.cpp: Updated from QuantLib 1.25
+
 2021-12-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Daye): Roll minor version
